# opendata

./: .dockerignore  .gitattributes  .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  MANIFESTO_SIGNERS.md  PROMPT.md  README.md
bencher/: Cargo.toml  README.md
bencher/src/: bench.rs  cli.rs  config.rs  exporter.rs  lib.rs  params.rs  recorder.rs  reporter.rs
buffer/: Cargo.toml  README.md
buffer-inspect/: Cargo.toml
buffer-inspect/src/: inspect.rs  main.rs
buffer/bench/: Cargo.toml
buffer/bench/src/: consumer_fetch_decode.rs
buffer/rfcs/: 0001-stateless-buffer.md  0002-buffer-metrics.md  0003-clickhouse-ingestor.md  0003-consumer-read-ahead.md
buffer/src/: buffer.rs  collector.rs  config.rs  consumer.rs  error.rs  gc.rs  lib.rs  metric_names.rs  producer.rs  queue.rs  reader.rs  writer.rs
clickhouse-ingestor/: Cargo.toml  Dockerfile
clickhouse-ingestor/src/: ack.rs  bench.rs  commit_group.rs  config.rs  envelope.rs  error.rs  lib.rs  metrics.rs  metrics_server.rs  runtime.rs  signal.rs  source.rs  writer.rs
clickhouse-ingestor/src/adapter/: logs.rs  mod.rs
clickhouse-ingestor/tests/: clickhouse_round_trip.rs  in_memory_runtime.rs
common/: AGENTS.md  Cargo.toml
common/benches/: varint.rs
common/src/: bytes.rs  cell.rs  clock.rs  display.rs  lib.rs  metrics.rs  sequence.rs  util.rs
common/src/coordinator/: coordinator.rs  error.rs  handle.rs  metrics.rs  mod.rs  subscriber.rs  traits.rs
common/src/serde/: encoding.rs  key_prefix.rs  mod.rs  record_tag.rs  seq_block.rs  sortable.rs  subsystem.rs  terminated_bytes.rs  varint.rs
common/src/storage/: config.rs  counting.rs  factory.rs  in_memory.rs  loader.rs  metrics_recorder.rs  mod.rs  object_store_observed.rs  query_io.rs  slate.rs  sst_blocks.rs  stats.rs  testing.rs  util.rs
common/src/tracing/: README.md  mod.rs  object_store.rs
common/src/write_coordinator/: coordinator.rs  coordinator_handle.rs  error.rs  flush.rs  handle.rs  mod.rs  traits.rs  types.rs
graph/: AGENTS.md  Cargo.toml  README.md
graph/src/: config.rs  db.rs  error.rs  lib.rs  main.rs
graph/src/serde/: keys.rs  mod.rs  values.rs
graph/src/server/: config.rs  error.rs  handlers.rs  http.rs  mod.rs
graph/src/storage/: catalog.rs  merge_operator.rs  mod.rs  reader.rs  writer.rs
graph/tests/: graph_db.rs  http_server.rs
ingest/: Cargo.toml  README.md
ingest/rfcs/: 0001-stateless-ingest.md  0002-ingest-metrics.md  0002-otel-metrics-export.md
ingest/src/: collector.rs  config.rs  error.rs  gc.rs  ingestor.rs  lib.rs  metric_names.rs  model.rs  queue.rs  queue_config.rs  util.rs
log/: AGENTS.md  Cargo.toml  Dockerfile  README.md
log/bench/: Cargo.toml  README.md
log/bench/configs/: ingest-smoke.toml  scan-deep-settled.toml  scan-local.toml  scan-seal-sweep.toml  scan-smoke.toml  scenario-a-cardinality.toml  slatedb-small-sst.toml
log/bench/results/: 2026-06-10-scan-path-comparison.md
log/c/: Cargo.toml  README.md  build.rs  cbindgen.toml
log/c/src/: db.rs  (+8 more)
log/examples/: manifest_dump.rs
log/inspect/: Cargo.toml
log/rfcs/: 0001-storage.md  0002-logical-segmentation.md  0003-key-listing.md  0003-listing-apis.md  0004-http-apis.md  0005-compaction-and-retention.md  0005-logcat-cli.md  0005-write-coordination.md  0006-cardinality-benchmark.md  0007-efficient-tail-scans.md  0007-global-scan.md  0007-observed-sequence-resume.md  0007-time-index.md
log/src/: codec.rs  compaction.rs  config.rs  delta.rs  delta_reader.rs  delta_writer.rs  direct.rs  durable.rs  error.rs  filter_prefix.rs  filter_sequence.rs  key_extractor.rs  lib.rs  listing.rs  log.rs  main.rs  model.rs  range.rs  read_stats.rs  reader.rs  segment.rs  segment_extractor.rs  sequence.rs  serde.rs  storage.rs  tree.rs  view.rs  view_tracker.rs  writer.rs
log/tests/: durable_sequence.rs  http_api_formats.rs  http_readonly_gateway.rs  http_server.rs  reader_writer.rs  retention_config.rs  retention_slatedb_smoke.rs  tree_summary.rs
timeseries/: AGENTS.md  Cargo.toml  Dockerfile  PERF_PROCESS_RATE.md  README.md  build.rs
timeseries/bench/: Cargo.toml
timeseries/benches/: README.md  common.rs  evaluator_micorbench.rs  otel_conversion.rs  response_serialization.rs  v2_engine_micorbench.rs
timeseries/docs/: local-ingest-e2e.md
timeseries/examples/: ingest_produce.rs  query_bench.rs
timeseries/quickstart/: Dockerfile.mock-metrics  Dockerfile.timeseries  docker-compose.yml  mock_metrics_server.py
timeseries/rfcs/: 0001-tsdb-storage.md  0002-write-api.md  0003-read-api.md  0004-service.md  0005-promql-function-signatures.md  0006-buffer-consumer.md  0006-ingest-consumer.md  0006-native-histogram-promql.md  0007-impl-plan.md  0007-promql-execution.md  0008-impl-plan.md  0008-v2-columnar-long-window-stress.md
timeseries/src/: active_series.rs  bench_api.rs  config.rs  delta.rs  error.rs  flusher.rs  head.rs  index.rs  ingest_consumer.rs  lib.rs  load_coordinator.rs  main.rs  metadata_warmer.rs  minitsdb.rs  model.rs  otel.rs  query.rs  query_io.rs  reader.rs  series.rs  testing.rs  timeseries.rs  tsdb.rs  tsdb_metrics.rs  tsdb_reader.rs  util.rs
timeseries/tests/: http_server.rs  otel_ingest.rs
timeseries/ui/: 404.html  app.js  index.html  style.css
vector/: Cargo.toml  Dockerfile  README.md  SPTAG_IMPROVEMENTS.md
vector/bench/: Cargo.toml  README.md  fts-1m-s3.toml  fts-smoke.toml
vector/benches/: l2_distance.rs  l2_score_and_rank.rs
vector/quickstart/: Dockerfile.embedded-reader  Dockerfile.embedding-server  Dockerfile.ingestor  README.md  docker-compose.yml  embedding_server.py  ingestor.py  smoke_test.sh
vector/rfcs/: 0001-storage.md  0002-write-api.md  0003-read-api.md  0004-http-apis.md  0004-index-rebalancing.md  0005-ann-indexing.md  0006-text-search.md  0007-buffer-consumer.md
vector/src/: admin.rs  db.rs  delta.rs  dictionary.rs  distance.rs  error.rs  flusher.rs  hnsw.rs  lib.rs  metric_names.rs  model.rs  query_engine.rs  reader.rs  snapshot.rs  test_utils.rs  text.rs  utils.rs  view_reader.rs
vector/tests/: README.md  fts_compaction_policy.rs  http_server.rs  sift1m.rs  text_search.rs
(+386 files in other folders)
