[workspace]
resolver = "2"
members = [
    "bencher",
    "common",
    "ingest",
    "keyvalue",
    "log",
    "log/bench",
    "log/c",
    "timeseries",
    "timeseries/bench",
    "vector",
    "vector/bench",
    "macros",
]

[workspace.package]
version = "0.1.3"
edition = "2024"

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1"
axum = "0.8"
axum-extra = { version = "0.12", features = ["query", "form"] }
base64 = "0.22"
bytes = "1.0"
chrono = "0.4"
clap = { version = "4", features = ["derive", "env"] }
config = "0.14"
dashmap = "6.1.0"
fail = "0.5"
figment = { version = "0.10", features = ["yaml"] }
futures = { version = "0.3", features = ["std"] }
moka = { version = "0.12", features = ["future"] }
bencher = { path = "./bencher" }
common = { path = "./common", package = "opendata-common", version = "0.1.12" }
ingest = { path = "./ingest", package = "opendata-ingest", version = "0.1.3" }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
roaring = "0.10"
rstest = "0.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = { version = "3", features = ["base64"] }
serde_yaml = "0.9"
foyer = "0.18"
slatedb = "0.11.1"
slatedb-common = "0.11.1"
thiserror = "2.0"
tokio = { version = "1.0", features = ["full", "test-util"] }
tokio-util = "0.7"
toml = "0.8"
tower = "0.5"
tower-http = { version = "0.5", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ulid = "1"
uuid = "1.14.0"
opentelemetry-proto = { version = "0.28", default-features = false, features = ["metrics", "gen-tonic-messages"] }
prost = "0.13"
proptest = "1"
dashu-float = "0.4"
snap = "1"
criterion = "0.5"
metrics = "0.24"
metrics-exporter-prometheus = "0.16"
zstd = "0.13"
tempfile = "3"
opendata-macros = { path = "./macros" }

[profile.release]
debug = true
strip = "none"
