[package]
name = "opendata-buffer"
version.workspace = true
edition.workspace = true
description = "Stateless object storage buffer library for OpenData systems"
license = "MIT"
repository = "https://github.com/opendata-oss/opendata"
readme = "README.md"
keywords = ["database", "buffer", "batching", "streaming"]
categories = ["database"]

[lib]
name = "buffer"
path = "src/lib.rs"

[[bin]]
name = "opendata-buffer"
path = "src/bin/opendata_buffer/main.rs"
required-features = ["cli"]

[features]
cli = ["dep:clap", "dep:base64", "dep:serde_json", "dep:tikv-jemallocator"]

[dependencies]
common.workspace = true
bytes.workspace = true
futures.workspace = true
serde.workspace = true
serde_with.workspace = true
slatedb.workspace = true
tokio.workspace = true
tokio-util.workspace = true
metrics.workspace = true
tracing.workspace = true
ulid.workspace = true
base64 = { workspace = true, optional = true }
clap = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
zstd.workspace = true

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
