[package]
name = "opendata-ingest"
version.workspace = true
edition.workspace = true

[lib]
name = "ingest"
path = "src/lib.rs"

[dependencies]
common.workspace = true
bytes.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true
slatedb.workspace = true
tokio.workspace = true
tokio-util.workspace = true
uuid = { workspace = true, features = ["v4"] }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
