[package]
name = "opendata-ingest"
version.workspace = true
edition.workspace = true

[lib]
name = "ingest"
path = "src/lib.rs"

[dependencies]
common.workspace = true
bytes.workspace = true
futures.workspace = true
serde.workspace = true
serde_with.workspace = true
slatedb.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
ulid.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
