[package]
name = "opendata-ingest"
version.workspace = true
edition.workspace = true
description = "Stateless object storage ingestion library for OpenData systems"
license = "MIT"
repository = "https://github.com/opendata-oss/opendata"
readme = "README.md"
keywords = ["database", "ingest", "batching", "streaming"]
categories = ["database"]

[lib]
name = "ingest"
path = "src/lib.rs"

[[bin]]
name = "opendata-ingest"
path = "src/bin/opendata_ingest/main.rs"
required-features = ["cli"]

[features]
cli = ["dep:clap", "dep:base64", "dep:serde_json"]

[dependencies]
common.workspace = true
bytes.workspace = true
futures.workspace = true
serde.workspace = true
serde_with.workspace = true
slatedb.workspace = true
tokio.workspace = true
tokio-util.workspace = true
metrics.workspace = true
tracing.workspace = true
ulid.workspace = true
base64 = { workspace = true, optional = true }
clap = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
zstd.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
