[package]
name = "log"
version.workspace = true
edition.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "log"
path = "src/main.rs"

[dependencies]
async-trait.workspace = true
axum.workspace = true
base64.workspace = true
bytes.workspace = true
clap.workspace = true
common.workspace = true
serde.workspace = true
serde_json.workspace = true
slatedb.workspace = true
tokio.workspace = true
tower.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

prometheus-client = "0.22"

[dev-dependencies]
proptest.workspace = true
reqwest.workspace = true
