[package]
name = "log"
version.workspace = true
edition.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "log"
path = "src/main.rs"

[dependencies]
async-trait.workspace = true
axum.workspace = true
bytes.workspace = true
clap.workspace = true
common.workspace = true
prost.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true
slatedb.workspace = true
tokio.workspace = true
tower.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

prometheus-client = "0.22"

[dev-dependencies]
base64.workspace = true
proptest.workspace = true
reqwest.workspace = true
