[package]
name = "opendata-vector"
version = "0.1.2"
edition.workspace = true
description = "Vector similarity search database built on SlateDB"
license = "MIT"
repository = "https://github.com/opendata-oss/opendata"
readme = "README.md"
keywords = ["database", "vector", "similarity-search", "embeddings"]
categories = ["database"]
exclude = ["tests/data/"]

[lib]
name = "vector"
path = "src/lib.rs"

[[bin]]
name = "opendata-vector"
path = "src/bin/server.rs"
required-features = ["http-server"]

[features]
default = []
http-server = ["dep:axum", "dep:tower", "dep:clap", "dep:prost", "dep:serde_json", "dep:serde_with"]
embedded-reader = ["dep:reqwest", "dep:serde_json"]

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
common.workspace = true
bytes.workspace = true
dashmap.workspace = true
fail.workspace = true
futures.workspace = true
usearch = "2"
roaring.workspace = true
rstest.workspace = true
tokio.workspace = true
serde.workspace = true
serde_yaml.workspace = true
slatedb.workspace = true
tokio-util.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
log = "0.4.29"
rand = "0.8"

# HTTP server dependencies (optional, enabled by http-server feature)
axum = { workspace = true, optional = true }
tower = { workspace = true, optional = true }
clap = { workspace = true, optional = true }
prost = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
serde_with = { workspace = true, optional = true }

# Embedded reader dependencies (optional, enabled by embedded-reader feature)
reqwest = { workspace = true, optional = true, features = ["json"] }

[[bin]]
name = "gen_sift100k_groundtruth"
path = "src/bin/gen_sift100k_groundtruth.rs"

[[bin]]
name = "embedded-reader"
path = "src/bin/embedded_reader.rs"
required-features = ["embedded-reader"]

[dev-dependencies]
common = { workspace = true, features = ["test-utils"] }
opendata-macros.workspace = true
reqwest.workspace = true
tempfile.workspace = true
