[package]
name = "buffer-bench"
version.workspace = true
edition.workspace = true
publish = false

[[bin]]
name = "buffer-bench-consumer-fetch-decode"
path = "src/consumer_fetch_decode.rs"

[dependencies]
buffer = { path = "..", package = "opendata-buffer" }
common.workspace = true
anyhow.workspace = true
bytes.workspace = true
clap.workspace = true
metrics.workspace = true
serde.workspace = true
serde_json.workspace = true
slatedb.workspace = true
tokio.workspace = true

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator.workspace = true
