[package]
name = "log-bench"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
bencher.workspace = true
bytes.workspace = true
log = { path = "..", package = "opendata-log" }
anyhow.workspace = true
async-trait.workspace = true
serde_yaml.workspace = true
tokio.workspace = true
metrics.workspace = true
metrics-util = "0.18"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator.workspace = true
