[package]
name = "log-bench"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
bencher.workspace = true
bytes.workspace = true
log = { path = "..", package = "opendata-log" }
anyhow.workspace = true
async-trait.workspace = true
async-channel = "2"
tokio.workspace = true
tokio-util.workspace = true

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator.workspace = true

[dev-dependencies]
common.workspace = true
