[package]
name = "log-bench"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
bencher.workspace = true
bytes.workspace = true
log = { path = "..", package = "opendata-log" }
common.workspace = true
anyhow.workspace = true
async-trait.workspace = true
tokio.workspace = true
tokio-util.workspace = true

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator.workspace = true
