[package]
name = "log-inspect"
version.workspace = true
edition.workspace = true
publish = false

[[bin]]
name = "log-inspect"
path = "src/main.rs"

[dependencies]
log = { path = "..", package = "opendata-log" }
common = { workspace = true }
anyhow.workspace = true
bytes.workspace = true
clap.workspace = true
chrono.workspace = true
serde_yaml.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
