[package]
name = "timeseries-bench"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
bencher.workspace = true
timeseries = { path = "..", package = "opendata-timeseries", features = ["testing"] }
anyhow.workspace = true
async-trait.workspace = true
tokio.workspace = true
