[package]
name = "vector-bench"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
bencher.workspace = true
common.workspace = true
vector = { path = "..", package = "opendata-vector" }
serde_yaml.workspace = true
anyhow.workspace = true
async-channel = "2"
async-trait.workspace = true
futures.workspace = true
tokio.workspace = true
