[package]
name = "vector-bench"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
bencher.workspace = true
common.workspace = true
foyer.workspace = true
vector = { path = "..", package = "opendata-vector" }
serde_yaml.workspace = true
anyhow.workspace = true
async-channel = "2"
async-trait.workspace = true
chrono.workspace = true
futures.workspace = true
sysinfo = "0.32"
tokio.workspace = true
tracing-subscriber.workspace = true

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator.workspace = true
